overflow fix

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -584,6 +584,8 @@ body
       min-height: 100vh
       min-height: 100lvh
       & > .blok-Head
+        .side_Top
+          top: -1px
         & > div
           border-top-color: transparent
       & > .blok-Head[data-scroll-start='true']
